--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -16,11 +16,10 @@
         android:textSize="25sp" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="35dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="17dp"
         app:cardCornerRadius="5dp">
 
         <LinearLayout
@@ -33,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Last update"
-                android:textColor="@color/colorGray"
+                android:textColor="@color/colorGrey"
                 android:textSize="12sp" />
 
             <TextView
@@ -41,18 +40,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="RUS - российский рубль"
-                android:textColor="@color/colorGray"
+                android:textColor="@color/colorGrey"
                 android:textSize="15sp" />
 
             <EditText
+                android:id="@+id/converterInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:hint="123, 50"
-                android:textColor="#9D9D9D"
+                android:hint="0"
+                android:inputType="number"
+                android:textColorHint="#9D9D9D"
+                android:textColor="@color/colorBlack"
                 android:textSize="25sp" />
 
             <LinearLayout
+                android:id="@+id/currencyChange"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -63,8 +66,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="USD - Доллар США"
-                    android:textColor="@color/colorGray"
-                    android:textSize="15dp" />
+                    android:textColor="@color/colorGrey"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -72,16 +75,17 @@
                     android:layout_weight="1"
                     android:gravity="end"
                     android:text="1 USD - 63,4"
-                    android:textColor="@color/colorGray"
-                    android:textSize="13dp" />
+                    android:textColor="@color/colorGrey"
+                    android:textSize="13sp" />
             </LinearLayout>
 
             <TextView
+                android:id="@+id/currencyResult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:backgroundTint="@color/colorGray"
-                android:text="1, 95"
+                android:backgroundTint="@color/colorGrey"
+                android:text="0"
                 android:textColor="#9D9D9D"
                 android:textSize="25sp" />
         </LinearLayout>
