--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/navClock"
         android:icon="@drawable/ic_clock"
-        android:title="@string/clock"
+        android:title="Convert"
         app:showAsAction="ifRoom" />
 
 
