--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorBlue">#262D38</color>
-    <color name="colorGray">#9D9D9D</color>
+    <color name="colorGrey">#9D9D9D</color>
+    <color name="colorDarkBlue">#12171D</color>
 </resources>
