--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -45,6 +45,11 @@
         android:paddingStart="15dp"
         android:paddingEnd="15dp" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/currencyList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <!--    <androidx.cardview.widget.CardView-->
     <!--        android:layout_width="350dp"-->
     <!--        android:layout_height="wrap_content"-->
