--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -7,12 +7,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="85dp"
         android:background="@color/colorDarkBlue"
         android:orientation="horizontal"
         android:paddingTop="20dp">
 
         <ImageView
+            android:id="@+id/currencyBack"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_gravity="center_vertical"
@@ -48,7 +49,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/currencyList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"/>
 
     <!--    <androidx.cardview.widget.CardView-->
     <!--        android:layout_width="350dp"-->
