--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -50,8 +50,8 @@
                 android:layout_marginTop="20dp"
                 android:hint="0"
                 android:inputType="number"
-                android:textColorHint="#9D9D9D"
                 android:textColor="@color/colorBlack"
+                android:textColorHint="#9D9D9D"
                 android:textSize="25sp" />
 
             <LinearLayout
@@ -62,6 +62,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/currencyName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -70,13 +71,14 @@
                     android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/currencyValue"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
                     android:text="1 USD - 63,4"
                     android:textColor="@color/colorGrey"
-                    android:textSize="13sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <TextView
