--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorBlue">#262D38</color>
     <color name="colorGrey">#9D9D9D</color>
     <color name="colorDarkBlue">#12171D</color>
+    <color name="colorCurrencyBlue">#3A3F52</color>
 </resources>
